--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,12 @@
       <artifactId>c3p0</artifactId>
       <version>0.9.5.5</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/net.coobird/thumbnailator -->
+    <dependency>
+      <groupId>net.coobird</groupId>
+      <artifactId>thumbnailator</artifactId>
+      <version>0.4.8</version>
+    </dependency>
 
   </dependencies>
 
