--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,12 @@
       <artifactId>kaptcha</artifactId>
       <version>2.3.2</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.4</version>
+    </dependency>
 
   </dependencies>
 
