--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,5 @@
 jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/o2o?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
-jdbc.username=root
-jdbc.password=yuanzm12
+jdbc.master.url=jdbc:mysql://localhost:3306/o2o?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+jdbc.slave.url=jdbc:mysql://192.168.1.9:3306/o2o?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+jdbc.username=work
+jdbc.password=mysql_work
