--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,14 @@
       <version>2.3.2</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.16.18</version>
+      <scope>provided</scope>
+    </dependency>
+
+
   </dependencies>
 
   <build>
