合并用户登陆，登出操作

--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,12 @@
       <scope>provided</scope>
     </dependency>
 
+    <dependency>
+      <groupId>com.baomidou</groupId>
+      <artifactId>mybatis-plus-boot-starter</artifactId>
+      <version>3.3.1.tmp</version>
+    </dependency>
+
 
   </dependencies>
 
