--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/o2o?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+jdbc.url=jdbc:mysql://118.31.50.77:3306/o2o?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
 jdbc.username=work
-jdbc.password=mysql_work
+jdbc.password=YUANzm12!
