--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,13 @@
       <artifactId>kaptcha</artifactId>
       <version>2.3.2</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
+    <dependency>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>2.9.0</version>
+    </dependency>
+
 
   </dependencies>
 
